--- a/dashboard.ipynb
+++ b/dashboard.ipynb
@@ -23,7 +23,8 @@
     "from dash import Dash, dcc, html, Output, Input\n",
     "import dash_bootstrap_components as dbc\n",
     "import pandas as pd\n",
-    "import plotly.express as px"
+    "import plotly.express as px\n",
+    "from summarytools import dfSummary"
    ]
   },
   {
@@ -48,7 +49,7 @@
    "source": [
     "# Data retrieved from https://www.kaggle.com/datasets/nicolsalayoarias/all-kpop-idols/?select=kpopidolsv3.csv\n",
     "data = pd.read_csv('kpopidolsv3.csv')\n",
-    "data"
+    "data.head()"
    ]
   },
   {
@@ -59,10 +60,73 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Extract required columns\n",
+    "df = data[[\"Full Name\", \"Group\", \"Former Group\", \"Date of Birth\", \"Debut\", \"Country\", \"Gender\"]]\n",
+    "\n",
+    "dfSummary(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Drop rows where Full Name is missing (unable to identify) and Debut is filled with a placeholder date (not yet debuted)\n",
+    "df = df.loc[df[\"Full Name\"].isnull() == False]\n",
+    "df = df.loc[df[\"Debut\"] != \"0/01/1900\"]\n",
+    "\n",
+    "# # Convert columns to required datatypes\n",
+    "df = df.astype({\"Full Name\": str, \"Group\": str, \"Former Group\": str, \"Country\": str, \"Gender\": str})\n",
+    "df[\"Date of Birth\"] = pd.to_datetime(df[\"Date of Birth\"], format = \"%d/%m/%Y\")\n",
+    "df[\"Debut\"] = pd.to_datetime(df[\"Debut\"], format = \"%d/%m/%Y\")\n",
+    "\n",
+    "df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfSummary(df)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Feature engineering"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Add new columns\n",
+    "df[\"Debut Year\"] = df[\"Debut\"].dt.year\n",
+    "df[\"Debut Month\"] = df[\"Debut\"].dt.month\n",
+    "df[\"Birth Year\"] = df[\"Date of Birth\"].dt.year\n",
+    "df[\"Birth Month\"]  =df[\"Date of Birth\"].dt.month\n",
+    "df[\"Debut Age\"] = df[\"Debut Year\"] - df[\"Birth Year\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert data types of the new columns\n",
+    "df.dtypes"
    ]
   },
   {
