Update feature engineering

--- a/dashboard.ipynb
+++ b/dashboard.ipynb
@@ -23,6 +23,7 @@
     "from dash import Dash, dcc, html, Output, Input\n",
     "import dash_bootstrap_components as dbc\n",
     "import pandas as pd\n",
+    "# from plotly_calplot import calplot\n",
     "import plotly.express as px\n",
     "from summarytools import dfSummary"
    ]
@@ -126,6 +127,9 @@
    "outputs": [],
    "source": [
     "# Convert data types of the new columns\n",
+    "# Fill Nan values in the new columns with 0 in order to allow conversion to int\n",
+    "df[[\"Debut Year\", \"Debut Month\", \"Birth Year\", \"Birth Month\", \"Debut Age\"]] = df[[\"Debut Year\", \"Debut Month\", \"Birth Year\", \"Birth Month\", \"Debut Age\"]].fillna(0).astype(int)\n",
+    "\n",
     "df.dtypes"
    ]
   },
@@ -182,35 +186,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. Histogram plot: debut anniversary distribution by year"
+    "2. Histogram plot: debut anniversary distribution by month"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. Histogram plot: debut anniversary distribution by month"
+    "3. Bubble plot: debut age distribution (all / male / female)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "4. Bubble plot: debut age distribution (all / male / female)"
+    "4. Bar plot: number of debuted idols per year"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "5. Bar plot: number of debuted idols per year"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "6. Bar plot: number of debuted groups per year"
+    "5. Bar plot: number of debuted groups per year"
    ]
   },
   {
