Initiated pie charts

--- a/dashboard.ipynb
+++ b/dashboard.ipynb
@@ -22,6 +22,7 @@
    "source": [
     "from dash import Dash, dcc, html, Output, Input\n",
     "import dash_bootstrap_components as dbc\n",
+    "import numpy as np\n",
     "import pandas as pd\n",
     "# from plotly_calplot import calplot\n",
     "import plotly.express as px\n",
@@ -158,14 +159,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. Histogram plot: idol birth year distribution (all / male / female)"
+    "2. Bar plot: idol birth year distribution (all / male / female)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. Histogram plot: idol birth month distribution (all / male / female)"
+    "3. Bar plot: idol birth month distribution (all / male / female)"
    ]
   },
   {
@@ -186,7 +187,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. Histogram plot: debut anniversary distribution by month"
+    "2. Bar plot: debut anniversary distribution by month"
    ]
   },
   {
@@ -225,6 +226,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Group by Gender\n",
+    "meta1 = df.groupby(['Gender']).count()['Full Name']\n",
+    "meta1.rename('Idol count', inplace = True)\n",
+    "# meta1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = px.pie(meta1, values = 'Full Name', names = meta1.index, title = 'Gender ratio of K-Pop idols', \n",
+    "             color_discrete_sequence = px.colors.sequential.Purp)\n",
+    "fig.show()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -236,6 +260,40 @@
    "metadata": {},
    "source": [
     "3. Pie chart: idol's country of origin distribution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Group by Country and relabel countries with few counts\n",
+    "meta3 = df.groupby(['Country']).count()['Full Name']\n",
+    "meta3.rename('Idol count', inplace = True)\n",
+    "meta3.index = np.where(meta3 < 3, 'Other countries', meta3.index)\n",
+    "meta3.index.name = 'Country of origin'\n",
+    "# meta3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "meta3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = px.pie(meta3, values = 'Idol count', names = meta3.index, title = 'Country of origin ratio of K-Pop idols', \n",
+    "             color_discrete_sequence = px.colors.sequential.Purpor)\n",
+    "fig.show()"
    ]
   },
   {
@@ -258,7 +316,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "app = Dash(__name__, external_stylesheets=[dbc.themes.VAPOR])"
+    "app = Dash(__name__, external_stylesheets=[dbc.themes.PULSE])"
    ]
   },
   {
