Initiated bar charts

--- a/dashboard.ipynb
+++ b/dashboard.ipynb
@@ -92,15 +92,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dfSummary(df)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -191,6 +182,38 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Group by Debut Month and exclude rows with placeholder / invalid dates\n",
+    "debut2 = df.groupby(['Debut Month']).count()['Full Name'].iloc[1:]\n",
+    "debut2.rename('Idol count', inplace = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig_debut2 = px.bar(debut2, x = debut2.index, y = 'Idol count', title = 'Debut month distribution of K-Pop idols', \n",
+    "             color = 'Idol count')\n",
+    "\n",
+    "fig_debut2.update_layout({'plot_bgcolor': 'rgba(0, 0, 0, 0)', 'paper_bgcolor': 'rgba(0, 0, 0, 0)'})\n",
+    "fig_debut2.update_layout(\n",
+    "    xaxis = dict(\n",
+    "        tickmode = 'array',\n",
+    "        tickvals = list(range(1, 13)),\n",
+    "        ticktext = [\"Jan\", \"Feb\", \"Mar\", \"Apr\", \"May\", \"Jun\", \"Jul\", \"Aug\", \"Sep\", \"Oct\", \"Nov\", \"Dec\"]\n",
+    "    )\n",
+    ")\n",
+    "\n",
+    "fig_debut2.show()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -205,10 +228,74 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Group by Debut Year and count by idol name; exclude rows with placeholder / invalid dates\n",
+    "debut4 = df.groupby(['Debut Year']).count()['Full Name']\n",
+    "debut4.rename('Idol count', inplace = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig_debut4 = px.bar(debut4, x = debut4.index, y = 'Idol count', title = 'Number of debuted K-Pop idols per year', \n",
+    "             color = 'Idol count')\n",
+    "\n",
+    "fig_debut4.update_layout({'plot_bgcolor': 'rgba(0, 0, 0, 0)', 'paper_bgcolor': 'rgba(0, 0, 0, 0)'})\n",
+    "# fig_debut4.update_layout(\n",
+    "#     xaxis = dict(\n",
+    "#         tickmode = 'array',\n",
+    "#         tickvals = list(range(1, 13)),\n",
+    "#         ticktext = [\"Jan\", \"Feb\", \"Mar\", \"Apr\", \"May\", \"Jun\", \"Jul\", \"Aug\", \"Sep\", \"Oct\", \"Nov\", \"Dec\"]\n",
+    "#     )\n",
+    "# )\n",
+    "\n",
+    "fig_debut4.show()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "5. Bar plot: number of debuted groups per year"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Group by Debut Year and count by group name; exclude rows with placeholder / invalid dates\n",
+    "debut5 = df[['Group', 'Debut Year']].groupby(['Debut Year']).nunique()['Group']\n",
+    "debut5.rename('Idol count', inplace = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig_debut5 = px.bar(debut5, x = debut5.index, y = 'Idol count', title = 'Number of debuted K-Pop groups per year', \n",
+    "             color = 'Idol count')\n",
+    "\n",
+    "fig_debut5.update_layout({'plot_bgcolor': 'rgba(0, 0, 0, 0)', 'paper_bgcolor': 'rgba(0, 0, 0, 0)'})\n",
+    "# fig_debut5.update_layout(\n",
+    "#     xaxis = dict(\n",
+    "#         tickmode = 'array',\n",
+    "#         tickvals = list(range(1, 13)),\n",
+    "#         ticktext = [\"Jan\", \"Feb\", \"Mar\", \"Apr\", \"May\", \"Jun\", \"Jul\", \"Aug\", \"Sep\", \"Oct\", \"Nov\", \"Dec\"]\n",
+    "#     )\n",
+    "# )\n",
+    "\n",
+    "fig_debut5.show()"
    ]
   },
   {
@@ -243,9 +330,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = px.pie(meta1, values = 'Full Name', names = meta1.index, title = 'Gender ratio of K-Pop idols', \n",
+    "fig_meta1 = px.pie(meta1, values = 'Full Name', names = meta1.index, title = 'Gender ratio of K-Pop idols', \n",
     "             color_discrete_sequence = px.colors.sequential.Purp)\n",
-    "fig.show()"
+    "\n",
+    "fig_meta1.show()"
    ]
   },
   {
@@ -253,6 +341,40 @@
    "metadata": {},
    "source": [
     "2. Bar plot: number of members per group"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Group by Group and count by existing group members, then group by the number of members\n",
+    "meta2 = df[['Group', 'Full Name']].groupby(['Group']).nunique()['Full Name']\n",
+    "meta2 = meta2.groupby(meta2.values).count()[:-1]\n",
+    "meta2.rename('Idol count', inplace = True)\n",
+    "meta2.index.name = 'Number of members'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig_meta2 = px.bar(meta2, x = meta2.index, y = 'Idol count', title = 'Number of members per K-Pop group', \n",
+    "             color = 'Idol count')\n",
+    "\n",
+    "fig_meta2.update_layout({'plot_bgcolor': 'rgba(0, 0, 0, 0)', 'paper_bgcolor': 'rgba(0, 0, 0, 0)'})\n",
+    "# fig_meta2.update_layout(\n",
+    "#     xaxis = dict(\n",
+    "#         tickmode = 'array',\n",
+    "#         tickvals = list(range(1, 13)),\n",
+    "#         ticktext = [\"Jan\", \"Feb\", \"Mar\", \"Apr\", \"May\", \"Jun\", \"Jul\", \"Aug\", \"Sep\", \"Oct\", \"Nov\", \"Dec\"]\n",
+    "#     )\n",
+    "# )\n",
+    "\n",
+    "fig_meta2.show()"
    ]
   },
   {
@@ -282,18 +404,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "meta3"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig = px.pie(meta3, values = 'Idol count', names = meta3.index, title = 'Country of origin ratio of K-Pop idols', \n",
+    "fig_meta3 = px.pie(meta3, values = 'Idol count', names = meta3.index, title = 'Country of origin ratio of K-Pop idols', \n",
     "             color_discrete_sequence = px.colors.sequential.Purpor)\n",
-    "fig.show()"
+    "\n",
+    "fig_meta3.show()"
    ]
   },
   {
