--- a/dashboard.ipynb
+++ b/dashboard.ipynb
@@ -83,12 +83,24 @@
     "df = df.loc[df[\"Full Name\"].isnull() == False]\n",
     "df = df.loc[df[\"Debut\"] != \"0/01/1900\"]\n",
     "\n",
-    "# # Convert columns to required datatypes\n",
+    "# Convert columns to required datatypes\n",
     "df = df.astype({\"Full Name\": str, \"Group\": str, \"Former Group\": str, \"Country\": str, \"Gender\": str})\n",
     "df[\"Date of Birth\"] = pd.to_datetime(df[\"Date of Birth\"], format = \"%d/%m/%Y\")\n",
     "df[\"Debut\"] = pd.to_datetime(df[\"Debut\"], format = \"%d/%m/%Y\")\n",
     "\n",
+    "# Filter for idols from 2nd Generation onwards (debuted in or after 2005)\n",
+    "df = df.loc[df[\"Debut\"] >= \"01/01/2005\"]\n",
+    "\n",
     "df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfSummary(df)"
    ]
   },
   {
@@ -147,6 +159,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Group by"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -154,10 +175,142 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Part 1: Group by birth year on all idols\n",
+    "bday2 = df.groupby(['Birth Year']).count()['Full Name'].iloc[1:]\n",
+    "bday2.rename('Idol count', inplace = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig_bday2 = px.bar(bday2, x = bday2.index, y = 'Idol count', title = 'Birth year distribution of K-Pop idols', \n",
+    "             color = 'Idol count')\n",
+    "\n",
+    "fig_bday2.update_layout({'plot_bgcolor': 'rgba(0, 0, 0, 0)', 'paper_bgcolor': 'rgba(0, 0, 0, 0)'})\n",
+    "fig_bday2.update_layout(\n",
+    "    xaxis = dict(\n",
+    "        tickmode = 'linear',\n",
+    "        tick0 = 1,\n",
+    "        dtick = 1\n",
+    "    )\n",
+    ")\n",
+    "\n",
+    "fig_bday2.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Part 2: Group by birth year and gender on all idols\n",
+    "bday2a = df.groupby(['Gender', 'Birth Year']).count()['Full Name']\n",
+    "bday2a = pd.concat([bday2a.iloc[:26], bday2a.iloc[27:]], axis = 0)\n",
+    "bday2a.rename('Idol count', inplace = True)\n",
+    "bday2a = bday2a.reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig_bday2a = px.bar(bday2a, x = 'Birth Year', y = 'Idol count', title = 'Birth year distribution of K-Pop idols by gender', \n",
+    "             color = 'Gender', color_discrete_sequence = px.colors.sequential.Purp, barmode = 'group')\n",
+    "\n",
+    "fig_bday2a.update_layout({'plot_bgcolor': 'rgba(0, 0, 0, 0)', 'paper_bgcolor': 'rgba(0, 0, 0, 0)'})\n",
+    "fig_bday2a.update_layout(\n",
+    "    xaxis = dict(\n",
+    "        tickmode = 'linear',\n",
+    "        tick0 = 1,\n",
+    "        dtick = 1\n",
+    "    )\n",
+    ")\n",
+    "\n",
+    "fig_bday2a.show()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "3. Bar plot: idol birth month distribution (all / male / female)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Part 1: Group by birth month on all idols\n",
+    "bday3 = df.groupby(['Birth Month']).count()['Full Name'].iloc[1:]\n",
+    "bday3.rename('Idol count', inplace = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig_bday3 = px.bar(bday3, x = bday3.index, y = 'Idol count', title = 'Birth month distribution of K-Pop idols', \n",
+    "             color = 'Idol count')\n",
+    "\n",
+    "fig_bday3.update_layout({'plot_bgcolor': 'rgba(0, 0, 0, 0)', 'paper_bgcolor': 'rgba(0, 0, 0, 0)'})\n",
+    "fig_bday3.update_layout(\n",
+    "    xaxis = dict(\n",
+    "        tickmode = 'array',\n",
+    "        tickvals = list(range(1, 13)),\n",
+    "        ticktext = [\"Jan\", \"Feb\", \"Mar\", \"Apr\", \"May\", \"Jun\", \"Jul\", \"Aug\", \"Sep\", \"Oct\", \"Nov\", \"Dec\"]\n",
+    "    )\n",
+    ")\n",
+    "\n",
+    "fig_bday3.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Part 2: Group by birth month and gender on all idols\n",
+    "bday3a = df.groupby(['Gender', 'Birth Month']).count()['Full Name']\n",
+    "bday3a = pd.concat([bday3a.iloc[:12], bday3a.iloc[13:]], axis = 0)\n",
+    "bday3a.rename('Idol count', inplace = True)\n",
+    "bday3a = bday3a.reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig_bday3a = px.bar(bday3a, x = 'Birth Month', y = 'Idol count', title = 'Birth month distribution of K-Pop idols by gender', \n",
+    "             color = 'Gender', color_discrete_sequence = px.colors.sequential.Purp, barmode = 'group')\n",
+    "\n",
+    "fig_bday3a.update_layout({'plot_bgcolor': 'rgba(0, 0, 0, 0)', 'paper_bgcolor': 'rgba(0, 0, 0, 0)'})\n",
+    "fig_bday3a.update_layout(\n",
+    "    xaxis = dict(\n",
+    "        tickmode = 'array',\n",
+    "        tickvals = list(range(1, 13)),\n",
+    "        ticktext = [\"Jan\", \"Feb\", \"Mar\", \"Apr\", \"May\", \"Jun\", \"Jul\", \"Aug\", \"Sep\", \"Oct\", \"Nov\", \"Dec\"]\n",
+    "    )\n",
+    ")\n",
+    "\n",
+    "fig_bday3a.show()"
    ]
   },
   {
@@ -172,6 +325,15 @@
    "metadata": {},
    "source": [
     "1. Calendar plot: debut anniversary distribution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Group by Debut Month"
    ]
   },
   {
@@ -248,13 +410,13 @@
     "             color = 'Idol count')\n",
     "\n",
     "fig_debut4.update_layout({'plot_bgcolor': 'rgba(0, 0, 0, 0)', 'paper_bgcolor': 'rgba(0, 0, 0, 0)'})\n",
-    "# fig_debut4.update_layout(\n",
-    "#     xaxis = dict(\n",
-    "#         tickmode = 'array',\n",
-    "#         tickvals = list(range(1, 13)),\n",
-    "#         ticktext = [\"Jan\", \"Feb\", \"Mar\", \"Apr\", \"May\", \"Jun\", \"Jul\", \"Aug\", \"Sep\", \"Oct\", \"Nov\", \"Dec\"]\n",
-    "#     )\n",
-    "# )\n",
+    "fig_debut4.update_layout(\n",
+    "    xaxis = dict(\n",
+    "        tickmode = 'linear',\n",
+    "        tick0 = 1,\n",
+    "        dtick = 1\n",
+    "    )\n",
+    ")\n",
     "\n",
     "fig_debut4.show()"
    ]
@@ -274,7 +436,7 @@
    "source": [
     "# Group by Debut Year and count by group name; exclude rows with placeholder / invalid dates\n",
     "debut5 = df[['Group', 'Debut Year']].groupby(['Debut Year']).nunique()['Group']\n",
-    "debut5.rename('Idol count', inplace = True)"
+    "debut5.rename('Group count', inplace = True)"
    ]
   },
   {
@@ -283,17 +445,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig_debut5 = px.bar(debut5, x = debut5.index, y = 'Idol count', title = 'Number of debuted K-Pop groups per year', \n",
-    "             color = 'Idol count')\n",
+    "fig_debut5 = px.bar(debut5, x = debut5.index, y = 'Group count', title = 'Number of debuted K-Pop groups per year', \n",
+    "             color = 'Group count')\n",
     "\n",
     "fig_debut5.update_layout({'plot_bgcolor': 'rgba(0, 0, 0, 0)', 'paper_bgcolor': 'rgba(0, 0, 0, 0)'})\n",
-    "# fig_debut5.update_layout(\n",
-    "#     xaxis = dict(\n",
-    "#         tickmode = 'array',\n",
-    "#         tickvals = list(range(1, 13)),\n",
-    "#         ticktext = [\"Jan\", \"Feb\", \"Mar\", \"Apr\", \"May\", \"Jun\", \"Jul\", \"Aug\", \"Sep\", \"Oct\", \"Nov\", \"Dec\"]\n",
-    "#     )\n",
-    "# )\n",
+    "fig_debut5.update_layout(\n",
+    "    xaxis = dict(\n",
+    "        tickmode = 'linear',\n",
+    "        tick0 = 1,\n",
+    "        dtick = 1\n",
+    "    )\n",
+    ")\n",
     "\n",
     "fig_debut5.show()"
    ]
@@ -320,8 +482,7 @@
    "source": [
     "# Group by Gender\n",
     "meta1 = df.groupby(['Gender']).count()['Full Name']\n",
-    "meta1.rename('Idol count', inplace = True)\n",
-    "# meta1"
+    "meta1.rename('Idol count', inplace = True)"
    ]
   },
   {
@@ -352,7 +513,7 @@
     "# Group by Group and count by existing group members, then group by the number of members\n",
     "meta2 = df[['Group', 'Full Name']].groupby(['Group']).nunique()['Full Name']\n",
     "meta2 = meta2.groupby(meta2.values).count()[:-1]\n",
-    "meta2.rename('Idol count', inplace = True)\n",
+    "meta2.rename('Group count', inplace = True)\n",
     "meta2.index.name = 'Number of members'"
    ]
   },
@@ -362,17 +523,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig_meta2 = px.bar(meta2, x = meta2.index, y = 'Idol count', title = 'Number of members per K-Pop group', \n",
-    "             color = 'Idol count')\n",
+    "fig_meta2 = px.bar(meta2, x = meta2.index, y = 'Group count', title = 'Number of members per K-Pop group', \n",
+    "             color = 'Group count')\n",
     "\n",
     "fig_meta2.update_layout({'plot_bgcolor': 'rgba(0, 0, 0, 0)', 'paper_bgcolor': 'rgba(0, 0, 0, 0)'})\n",
-    "# fig_meta2.update_layout(\n",
-    "#     xaxis = dict(\n",
-    "#         tickmode = 'array',\n",
-    "#         tickvals = list(range(1, 13)),\n",
-    "#         ticktext = [\"Jan\", \"Feb\", \"Mar\", \"Apr\", \"May\", \"Jun\", \"Jul\", \"Aug\", \"Sep\", \"Oct\", \"Nov\", \"Dec\"]\n",
-    "#     )\n",
-    "# )\n",
+    "fig_meta2.update_layout(\n",
+    "    xaxis = dict(\n",
+    "        tickmode = 'linear',\n",
+    "        tick0 = 1,\n",
+    "        dtick = 1\n",
+    "    )\n",
+    ")\n",
     "\n",
     "fig_meta2.show()"
    ]
