Initialised app layout

--- a/dashboard.ipynb
+++ b/dashboard.ipynb
@@ -22,6 +22,7 @@
    "source": [
     "from dash import Dash, dcc, html, Output, Input\n",
     "import dash_bootstrap_components as dbc\n",
+    "from dash_bootstrap_templates import load_figure_template\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "# from plotly_calplot import calplot\n",
@@ -142,6 +143,15 @@
    "metadata": {},
    "source": [
     "## Data visualisation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "load_figure_template(\"pulse\")"
    ]
   },
   {
@@ -383,6 +393,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Group by Debut Age and Gender\n",
+    "debut3 = df.groupby(['Debut Age', 'Gender']).count()['Full Name']\n",
+    "debut3.rename('Idol count', inplace = True)\n",
+    "# debut3 = debut3.reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.sort_values(by=['Debut Age'])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -491,7 +522,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig_meta1 = px.pie(meta1, values = 'Full Name', names = meta1.index, title = 'Gender ratio of K-Pop idols', \n",
+    "fig_meta1 = px.pie(meta1, values = 'Idol count', names = meta1.index, title = 'Gender ratio of K-Pop idols', \n",
     "             color_discrete_sequence = px.colors.sequential.Purp)\n",
     "\n",
     "fig_meta1.show()"
@@ -555,7 +586,7 @@
     "meta3 = df.groupby(['Country']).count()['Full Name']\n",
     "meta3.rename('Idol count', inplace = True)\n",
     "meta3.index = np.where(meta3 < 3, 'Other countries', meta3.index)\n",
-    "meta3.index.name = 'Country of origin'\n",
+    "meta3.index.name = 'Country / region of origin'\n",
     "# meta3"
    ]
   },
@@ -565,7 +596,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig_meta3 = px.pie(meta3, values = 'Idol count', names = meta3.index, title = 'Country of origin ratio of K-Pop idols', \n",
+    "fig_meta3 = px.pie(meta3, values = 'Idol count', names = meta3.index, title = 'Country / region of origin ratio of K-Pop idols', \n",
     "             color_discrete_sequence = px.colors.sequential.Purpor)\n",
     "\n",
     "fig_meta3.show()"
@@ -602,6 +633,45 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# title = dcc.Markdown(children='# K-Pop Data Visualisations')\n",
+    "app.layout = html.Div([\n",
+    "        html.H1('K-Pop Data Visualisations'),\n",
+    "        html.Div([\n",
+    "            html.H2('Idol Birthday Analysis'),\n",
+    "            html.H3('Idol birth year distribution'),\n",
+    "            dcc.Graph(figure = fig_bday2),\n",
+    "            dcc.Graph(figure = fig_bday2a),\n",
+    "            html.H3('Idol birth month distribution'),\n",
+    "            dcc.Graph(figure = fig_bday3),\n",
+    "            dcc.Graph(figure = fig_bday3a),\n",
+    "        ]),\n",
+    "        html.Div([\n",
+    "            html.H2('Idol Debut Analysis'),\n",
+    "            html.H3('Idol debut month distribution'),\n",
+    "            dcc.Graph(figure = fig_debut2),\n",
+    "            html.H3('Number of debuted idols per year'),\n",
+    "            dcc.Graph(figure = fig_debut4),\n",
+    "            html.H3('Number of debuted groups per year'),\n",
+    "            dcc.Graph(figure = fig_debut5),\n",
+    "        ]),\n",
+    "        html.Div([\n",
+    "            html.H2('Meta-analysis'),\n",
+    "            html.H3('Gender ratio of idols'),\n",
+    "            dcc.Graph(figure = fig_meta1),\n",
+    "            html.H3('Number of members per group'),\n",
+    "            dcc.Graph(figure = fig_meta2),\n",
+    "            html.H3('Country of origin distribution of idols'),\n",
+    "            dcc.Graph(figure = fig_meta3)\n",
+    "        ])\n",
+    "])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -615,7 +685,7 @@
    "outputs": [],
    "source": [
     "if __name__ == '__main__':\n",
-    "    app.run_server(debug=True)"
+    "    app.run_server(debug = True)"
    ]
   }
  ],
