--- a/dashboard.ipynb
+++ b/dashboard.ipynb
@@ -20,7 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from dash import Dash, dcc, html, Output, Input\n",
+    "from dash import Dash, dcc, html, Output, Input, callback\n",
     "import dash_bootstrap_components as dbc\n",
     "from dash_bootstrap_templates import load_figure_template\n",
     "import numpy as np\n",
@@ -151,7 +151,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "load_figure_template(\"pulse\")"
+    "load_figure_template([\"pulse_dark\"])"
    ]
   },
   {
@@ -204,7 +204,7 @@
     "fig_bday2 = px.bar(bday2, x = bday2.index, y = 'Idol count', title = 'Birth year distribution of K-Pop idols', \n",
     "             color = 'Idol count')\n",
     "\n",
-    "fig_bday2.update_layout({'plot_bgcolor': 'rgba(0, 0, 0, 0)', 'paper_bgcolor': 'rgba(0, 0, 0, 0)'})\n",
+    "# fig_bday2.update_layout({'plot_bgcolor': 'rgba(0, 0, 0, 0)', 'paper_bgcolor': 'rgba(0, 0, 0, 0)'})\n",
     "fig_bday2.update_layout(\n",
     "    xaxis = dict(\n",
     "        tickmode = 'linear',\n",
@@ -236,9 +236,9 @@
    "outputs": [],
    "source": [
     "fig_bday2a = px.bar(bday2a, x = 'Birth Year', y = 'Idol count', title = 'Birth year distribution of K-Pop idols by gender', \n",
-    "             color = 'Gender', color_discrete_sequence = px.colors.sequential.Purp, barmode = 'group')\n",
-    "\n",
-    "fig_bday2a.update_layout({'plot_bgcolor': 'rgba(0, 0, 0, 0)', 'paper_bgcolor': 'rgba(0, 0, 0, 0)'})\n",
+    "             color = 'Gender', barmode = 'group')\n",
+    "# color_discrete_sequence = px.colors.sequential.Purp\n",
+    "# fig_bday2a.update_layout({'plot_bgcolor': 'rgba(0, 0, 0, 0)', 'paper_bgcolor': 'rgba(0, 0, 0, 0)'})\n",
     "fig_bday2a.update_layout(\n",
     "    xaxis = dict(\n",
     "        tickmode = 'linear',\n",
@@ -277,7 +277,7 @@
     "fig_bday3 = px.bar(bday3, x = bday3.index, y = 'Idol count', title = 'Birth month distribution of K-Pop idols', \n",
     "             color = 'Idol count')\n",
     "\n",
-    "fig_bday3.update_layout({'plot_bgcolor': 'rgba(0, 0, 0, 0)', 'paper_bgcolor': 'rgba(0, 0, 0, 0)'})\n",
+    "# fig_bday3.update_layout({'plot_bgcolor': 'rgba(0, 0, 0, 0)', 'paper_bgcolor': 'rgba(0, 0, 0, 0)'})\n",
     "fig_bday3.update_layout(\n",
     "    xaxis = dict(\n",
     "        tickmode = 'array',\n",
@@ -309,9 +309,9 @@
    "outputs": [],
    "source": [
     "fig_bday3a = px.bar(bday3a, x = 'Birth Month', y = 'Idol count', title = 'Birth month distribution of K-Pop idols by gender', \n",
-    "             color = 'Gender', color_discrete_sequence = px.colors.sequential.Purp, barmode = 'group')\n",
-    "\n",
-    "fig_bday3a.update_layout({'plot_bgcolor': 'rgba(0, 0, 0, 0)', 'paper_bgcolor': 'rgba(0, 0, 0, 0)'})\n",
+    "             color = 'Gender', barmode = 'group')\n",
+    "# color_discrete_sequence = px.colors.sequential.Purp\n",
+    "# fig_bday3a.update_layout({'plot_bgcolor': 'rgba(0, 0, 0, 0)', 'paper_bgcolor': 'rgba(0, 0, 0, 0)'})\n",
     "fig_bday3a.update_layout(\n",
     "    xaxis = dict(\n",
     "        tickmode = 'array',\n",
@@ -373,7 +373,7 @@
     "fig_debut2 = px.bar(debut2, x = debut2.index, y = 'Idol count', title = 'Debut month distribution of K-Pop idols', \n",
     "             color = 'Idol count')\n",
     "\n",
-    "fig_debut2.update_layout({'plot_bgcolor': 'rgba(0, 0, 0, 0)', 'paper_bgcolor': 'rgba(0, 0, 0, 0)'})\n",
+    "# fig_debut2.update_layout({'plot_bgcolor': 'rgba(0, 0, 0, 0)', 'paper_bgcolor': 'rgba(0, 0, 0, 0)'})\n",
     "fig_debut2.update_layout(\n",
     "    xaxis = dict(\n",
     "        tickmode = 'array',\n",
@@ -440,7 +440,7 @@
     "fig_debut4 = px.bar(debut4, x = debut4.index, y = 'Idol count', title = 'Number of debuted K-Pop idols per year', \n",
     "             color = 'Idol count')\n",
     "\n",
-    "fig_debut4.update_layout({'plot_bgcolor': 'rgba(0, 0, 0, 0)', 'paper_bgcolor': 'rgba(0, 0, 0, 0)'})\n",
+    "# fig_debut4.update_layout({'plot_bgcolor': 'rgba(0, 0, 0, 0)', 'paper_bgcolor': 'rgba(0, 0, 0, 0)'})\n",
     "fig_debut4.update_layout(\n",
     "    xaxis = dict(\n",
     "        tickmode = 'linear',\n",
@@ -479,7 +479,7 @@
     "fig_debut5 = px.bar(debut5, x = debut5.index, y = 'Group count', title = 'Number of debuted K-Pop groups per year', \n",
     "             color = 'Group count')\n",
     "\n",
-    "fig_debut5.update_layout({'plot_bgcolor': 'rgba(0, 0, 0, 0)', 'paper_bgcolor': 'rgba(0, 0, 0, 0)'})\n",
+    "# fig_debut5.update_layout({'plot_bgcolor': 'rgba(0, 0, 0, 0)', 'paper_bgcolor': 'rgba(0, 0, 0, 0)'})\n",
     "fig_debut5.update_layout(\n",
     "    xaxis = dict(\n",
     "        tickmode = 'linear',\n",
@@ -522,8 +522,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig_meta1 = px.pie(meta1, values = 'Idol count', names = meta1.index, title = 'Gender ratio of K-Pop idols', \n",
-    "             color_discrete_sequence = px.colors.sequential.Purp)\n",
+    "fig_meta1 = px.pie(meta1, values = 'Idol count', names = meta1.index, title = 'Gender ratio of K-Pop idols')\n",
     "\n",
     "fig_meta1.show()"
    ]
@@ -557,7 +556,7 @@
     "fig_meta2 = px.bar(meta2, x = meta2.index, y = 'Group count', title = 'Number of members per K-Pop group', \n",
     "             color = 'Group count')\n",
     "\n",
-    "fig_meta2.update_layout({'plot_bgcolor': 'rgba(0, 0, 0, 0)', 'paper_bgcolor': 'rgba(0, 0, 0, 0)'})\n",
+    "# fig_meta2.update_layout({'plot_bgcolor': 'rgba(0, 0, 0, 0)', 'paper_bgcolor': 'rgba(0, 0, 0, 0)'})\n",
     "fig_meta2.update_layout(\n",
     "    xaxis = dict(\n",
     "        tickmode = 'linear',\n",
@@ -596,9 +595,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig_meta3 = px.pie(meta3, values = 'Idol count', names = meta3.index, title = 'Country / region of origin ratio of K-Pop idols', \n",
-    "             color_discrete_sequence = px.colors.sequential.Purpor)\n",
-    "\n",
+    "fig_meta3 = px.pie(meta3, values = 'Idol count', names = meta3.index, title = 'Country / region of origin ratio of K-Pop idols')\n",
+    "# color_discrete_sequence = px.colors.sequential.Purpor\n",
     "fig_meta3.show()"
    ]
   },
@@ -638,37 +636,94 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# title = dcc.Markdown(children='# K-Pop Data Visualisations')\n",
+    "# Define repeatedly-used styling\n",
+    "H2_STYLE = 'my-3 ms-2 text-primary border-bottom border-primary'\n",
+    "H3_STYLE = 'my-3 ms-4 opacity-75'\n",
+    "TAB_STYLE = 'bg-dark bg-gradient text-white'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "app.layout = html.Div([\n",
-    "        html.H1('K-Pop Data Visualisations'),\n",
+    "        html.H1('K-Pop Data Visualisations', className = 'my-5 ms-2 bg-primary bg-opacity-50 text-dark rounded'),\n",
     "        html.Div([\n",
-    "            html.H2('Idol Birthday Analysis'),\n",
-    "            html.H3('Idol birth year distribution'),\n",
-    "            dcc.Graph(figure = fig_bday2),\n",
-    "            dcc.Graph(figure = fig_bday2a),\n",
-    "            html.H3('Idol birth month distribution'),\n",
-    "            dcc.Graph(figure = fig_bday3),\n",
-    "            dcc.Graph(figure = fig_bday3a),\n",
+    "            html.H2('Idol Birthday Analysis', className = H2_STYLE),\n",
+    "            html.Div([\n",
+    "                html.H3('Idol birth year distribution', className = H3_STYLE),\n",
+    "                dcc.Tabs(id=\"tabs-birth-year\", value='overall-birth-year', children=[\n",
+    "                    dcc.Tab(label='Overall', value='overall-birth-year', className=TAB_STYLE),\n",
+    "                    dcc.Tab(label='Male / Female', value='splitted-birth-year', className=TAB_STYLE),\n",
+    "                ]),\n",
+    "                html.Div(id='tabs-content-birth-year')\n",
+    "            ]),\n",
+    "            html.Div([\n",
+    "                html.H3('Idol birth month distribution', className = H3_STYLE),\n",
+    "                dcc.Tabs(id=\"tabs-birth-month\", value='overall-birth-month', children=[\n",
+    "                    dcc.Tab(label='Overall', value='overall-birth-month', className=TAB_STYLE),\n",
+    "                    dcc.Tab(label='Male / Female', value='splitted-birth-month', className=TAB_STYLE),\n",
+    "                ]),\n",
+    "                html.Div(id='tabs-content-birth-month')\n",
+    "            ]),\n",
     "        ]),\n",
     "        html.Div([\n",
-    "            html.H2('Idol Debut Analysis'),\n",
-    "            html.H3('Idol debut month distribution'),\n",
-    "            dcc.Graph(figure = fig_debut2),\n",
-    "            html.H3('Number of debuted idols per year'),\n",
-    "            dcc.Graph(figure = fig_debut4),\n",
-    "            html.H3('Number of debuted groups per year'),\n",
-    "            dcc.Graph(figure = fig_debut5),\n",
+    "            html.H2('Idol Debut Analysis', className = H2_STYLE),\n",
+    "            html.Div([\n",
+    "                html.H3('Idol debut month distribution', className = H3_STYLE),\n",
+    "                dcc.Graph(figure = fig_debut2),\n",
+    "            ]),\n",
+    "            html.Div([\n",
+    "                html.H3('Number of debuted idols per year', className = H3_STYLE),\n",
+    "                dcc.Graph(figure = fig_debut4),\n",
+    "            ]),\n",
+    "            html.Div([\n",
+    "                html.H3('Number of debuted groups per year', className = H3_STYLE),\n",
+    "                dcc.Graph(figure = fig_debut5),\n",
+    "            ]),\n",
     "        ]),\n",
     "        html.Div([\n",
-    "            html.H2('Meta-analysis'),\n",
-    "            html.H3('Gender ratio of idols'),\n",
-    "            dcc.Graph(figure = fig_meta1),\n",
-    "            html.H3('Number of members per group'),\n",
-    "            dcc.Graph(figure = fig_meta2),\n",
-    "            html.H3('Country of origin distribution of idols'),\n",
-    "            dcc.Graph(figure = fig_meta3)\n",
+    "            html.H2('Meta-analysis', className = H2_STYLE),\n",
+    "            html.Div([\n",
+    "                html.H3('Gender ratio of idols', className = H3_STYLE),\n",
+    "                dcc.Graph(figure = fig_meta1),\n",
+    "            ]),\n",
+    "            html.Div([\n",
+    "                html.H3('Number of members per group', className = H3_STYLE),\n",
+    "                dcc.Graph(figure = fig_meta2),\n",
+    "            ]),\n",
+    "            html.Div([\n",
+    "                html.H3('Country of origin distribution of idols', className = H3_STYLE),\n",
+    "                dcc.Graph(figure = fig_meta3)\n",
+    "            ])\n",
     "        ])\n",
-    "])"
+    "])\n",
+    "\n",
+    "\n",
+    "@callback(Output('tabs-content-birth-year', 'children'), Input('tabs-birth-year', 'value'))\n",
+    "def render_content(tab):\n",
+    "    if tab == 'overall-birth-year':\n",
+    "        return html.Div([\n",
+    "            dcc.Graph(figure = fig_bday2)\n",
+    "        ])\n",
+    "    elif tab == 'splitted-birth-year':\n",
+    "        return html.Div([\n",
+    "            dcc.Graph(figure = fig_bday2a)\n",
+    "        ])\n",
+    "    \n",
+    "\n",
+    "@callback(Output('tabs-content-birth-month', 'children'), Input('tabs-birth-month', 'value'))\n",
+    "def render_content(tab):\n",
+    "    if tab == 'overall-birth-month':\n",
+    "        return html.Div([\n",
+    "            dcc.Graph(figure = fig_bday3)\n",
+    "        ])\n",
+    "    elif tab == 'splitted-birth-month':\n",
+    "        return html.Div([\n",
+    "            dcc.Graph(figure = fig_bday3a)\n",
+    "        ])"
    ]
   },
   {
@@ -685,7 +740,7 @@
    "outputs": [],
    "source": [
     "if __name__ == '__main__':\n",
-    "    app.run_server(debug = True)"
+    "    app.run(debug = True)"
    ]
   }
  ],
