Updated app styling

--- a/dashboard.ipynb
+++ b/dashboard.ipynb
@@ -121,7 +121,7 @@
     "df[\"Debut Year\"] = df[\"Debut\"].dt.year\n",
     "df[\"Debut Month\"] = df[\"Debut\"].dt.month\n",
     "df[\"Birth Year\"] = df[\"Date of Birth\"].dt.year\n",
-    "df[\"Birth Month\"]  =df[\"Date of Birth\"].dt.month\n",
+    "df[\"Birth Month\"] = df[\"Date of Birth\"].dt.month\n",
     "df[\"Debut Age\"] = df[\"Debut Year\"] - df[\"Birth Year\"]"
    ]
   },
@@ -204,7 +204,6 @@
     "fig_bday2 = px.bar(bday2, x = bday2.index, y = 'Idol count', title = 'Birth year distribution of K-Pop idols', \n",
     "             color = 'Idol count')\n",
     "\n",
-    "# fig_bday2.update_layout({'plot_bgcolor': 'rgba(0, 0, 0, 0)', 'paper_bgcolor': 'rgba(0, 0, 0, 0)'})\n",
     "fig_bday2.update_layout(\n",
     "    xaxis = dict(\n",
     "        tickmode = 'linear',\n",
@@ -213,7 +212,7 @@
     "    )\n",
     ")\n",
     "\n",
-    "fig_bday2.show()"
+    "# fig_bday2.show()"
    ]
   },
   {
@@ -237,8 +236,7 @@
    "source": [
     "fig_bday2a = px.bar(bday2a, x = 'Birth Year', y = 'Idol count', title = 'Birth year distribution of K-Pop idols by gender', \n",
     "             color = 'Gender', barmode = 'group')\n",
-    "# color_discrete_sequence = px.colors.sequential.Purp\n",
-    "# fig_bday2a.update_layout({'plot_bgcolor': 'rgba(0, 0, 0, 0)', 'paper_bgcolor': 'rgba(0, 0, 0, 0)'})\n",
+    "\n",
     "fig_bday2a.update_layout(\n",
     "    xaxis = dict(\n",
     "        tickmode = 'linear',\n",
@@ -247,7 +245,7 @@
     "    )\n",
     ")\n",
     "\n",
-    "fig_bday2a.show()"
+    "# fig_bday2a.show()"
    ]
   },
   {
@@ -277,7 +275,6 @@
     "fig_bday3 = px.bar(bday3, x = bday3.index, y = 'Idol count', title = 'Birth month distribution of K-Pop idols', \n",
     "             color = 'Idol count')\n",
     "\n",
-    "# fig_bday3.update_layout({'plot_bgcolor': 'rgba(0, 0, 0, 0)', 'paper_bgcolor': 'rgba(0, 0, 0, 0)'})\n",
     "fig_bday3.update_layout(\n",
     "    xaxis = dict(\n",
     "        tickmode = 'array',\n",
@@ -286,7 +283,7 @@
     "    )\n",
     ")\n",
     "\n",
-    "fig_bday3.show()"
+    "# fig_bday3.show()"
    ]
   },
   {
@@ -310,8 +307,7 @@
    "source": [
     "fig_bday3a = px.bar(bday3a, x = 'Birth Month', y = 'Idol count', title = 'Birth month distribution of K-Pop idols by gender', \n",
     "             color = 'Gender', barmode = 'group')\n",
-    "# color_discrete_sequence = px.colors.sequential.Purp\n",
-    "# fig_bday3a.update_layout({'plot_bgcolor': 'rgba(0, 0, 0, 0)', 'paper_bgcolor': 'rgba(0, 0, 0, 0)'})\n",
+    "\n",
     "fig_bday3a.update_layout(\n",
     "    xaxis = dict(\n",
     "        tickmode = 'array',\n",
@@ -320,7 +316,7 @@
     "    )\n",
     ")\n",
     "\n",
-    "fig_bday3a.show()"
+    "# fig_bday3a.show()"
    ]
   },
   {
@@ -373,7 +369,6 @@
     "fig_debut2 = px.bar(debut2, x = debut2.index, y = 'Idol count', title = 'Debut month distribution of K-Pop idols', \n",
     "             color = 'Idol count')\n",
     "\n",
-    "# fig_debut2.update_layout({'plot_bgcolor': 'rgba(0, 0, 0, 0)', 'paper_bgcolor': 'rgba(0, 0, 0, 0)'})\n",
     "fig_debut2.update_layout(\n",
     "    xaxis = dict(\n",
     "        tickmode = 'array',\n",
@@ -382,7 +377,7 @@
     "    )\n",
     ")\n",
     "\n",
-    "fig_debut2.show()"
+    "# fig_debut2.show()"
    ]
   },
   {
@@ -399,8 +394,8 @@
    "outputs": [],
    "source": [
     "# Group by Debut Age and Gender\n",
-    "debut3 = df.groupby(['Debut Age', 'Gender']).count()['Full Name']\n",
-    "debut3.rename('Idol count', inplace = True)\n",
+    "# debut3 = df.groupby(['Debut Age', 'Gender']).count()['Full Name']\n",
+    "# debut3.rename('Idol count', inplace = True)\n",
     "# debut3 = debut3.reset_index()"
    ]
   },
@@ -410,7 +405,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.sort_values(by=['Debut Age'])"
+    "# df.sort_values(by=['Debut Age'])"
    ]
   },
   {
@@ -440,7 +435,6 @@
     "fig_debut4 = px.bar(debut4, x = debut4.index, y = 'Idol count', title = 'Number of debuted K-Pop idols per year', \n",
     "             color = 'Idol count')\n",
     "\n",
-    "# fig_debut4.update_layout({'plot_bgcolor': 'rgba(0, 0, 0, 0)', 'paper_bgcolor': 'rgba(0, 0, 0, 0)'})\n",
     "fig_debut4.update_layout(\n",
     "    xaxis = dict(\n",
     "        tickmode = 'linear',\n",
@@ -449,7 +443,7 @@
     "    )\n",
     ")\n",
     "\n",
-    "fig_debut4.show()"
+    "# fig_debut4.show()"
    ]
   },
   {
@@ -479,7 +473,6 @@
     "fig_debut5 = px.bar(debut5, x = debut5.index, y = 'Group count', title = 'Number of debuted K-Pop groups per year', \n",
     "             color = 'Group count')\n",
     "\n",
-    "# fig_debut5.update_layout({'plot_bgcolor': 'rgba(0, 0, 0, 0)', 'paper_bgcolor': 'rgba(0, 0, 0, 0)'})\n",
     "fig_debut5.update_layout(\n",
     "    xaxis = dict(\n",
     "        tickmode = 'linear',\n",
@@ -488,7 +481,7 @@
     "    )\n",
     ")\n",
     "\n",
-    "fig_debut5.show()"
+    "# fig_debut5.show()"
    ]
   },
   {
@@ -524,7 +517,7 @@
    "source": [
     "fig_meta1 = px.pie(meta1, values = 'Idol count', names = meta1.index, title = 'Gender ratio of K-Pop idols')\n",
     "\n",
-    "fig_meta1.show()"
+    "# fig_meta1.show()"
    ]
   },
   {
@@ -556,7 +549,6 @@
     "fig_meta2 = px.bar(meta2, x = meta2.index, y = 'Group count', title = 'Number of members per K-Pop group', \n",
     "             color = 'Group count')\n",
     "\n",
-    "# fig_meta2.update_layout({'plot_bgcolor': 'rgba(0, 0, 0, 0)', 'paper_bgcolor': 'rgba(0, 0, 0, 0)'})\n",
     "fig_meta2.update_layout(\n",
     "    xaxis = dict(\n",
     "        tickmode = 'linear',\n",
@@ -565,7 +557,7 @@
     "    )\n",
     ")\n",
     "\n",
-    "fig_meta2.show()"
+    "# fig_meta2.show()"
    ]
   },
   {
@@ -596,8 +588,8 @@
    "outputs": [],
    "source": [
     "fig_meta3 = px.pie(meta3, values = 'Idol count', names = meta3.index, title = 'Country / region of origin ratio of K-Pop idols')\n",
-    "# color_discrete_sequence = px.colors.sequential.Purpor\n",
-    "fig_meta3.show()"
+    "\n",
+    "# fig_meta3.show()"
    ]
   },
   {
@@ -637,9 +629,10 @@
    "outputs": [],
    "source": [
     "# Define repeatedly-used styling\n",
-    "H2_STYLE = 'my-3 ms-2 text-primary border-bottom border-primary'\n",
-    "H3_STYLE = 'my-3 ms-4 opacity-75'\n",
-    "TAB_STYLE = 'bg-dark bg-gradient text-white'"
+    "H2_STYLE = 'my-4 ms-2 me-2 text-primary border-bottom border-primary'\n",
+    "H3_STYLE = 'mt-4 mb-3 ms-4 opacity-75'\n",
+    "TAB_STYLE = 'bg-primary bg-gradient bg-opacity-50 text-black'\n",
+    "TAB_SELECTED_STYLE = 'bg-light bg-gradient text-primary mx-2'"
    ]
   },
   {
@@ -649,80 +642,81 @@
    "outputs": [],
    "source": [
     "app.layout = html.Div([\n",
-    "        html.H1('K-Pop Data Visualisations', className = 'my-5 ms-2 bg-primary bg-opacity-50 text-dark rounded'),\n",
+    "        html.H1('K-Pop Data Visualisations', className='mt-5 mb-2 ms-2 me-2 bg-primary bg-opacity-50 text-dark rounded'),\n",
+    "        html.A('Find data source here', href='https://www.kaggle.com/datasets/nicolsalayoarias/all-kpop-idols/?select=kpopidolsv3.csv', className='mb-4 ms-2'),\n",
     "        html.Div([\n",
-    "            html.H2('Idol Birthday Analysis', className = H2_STYLE),\n",
+    "            html.H2('Idol Birthday Analysis', className=H2_STYLE),\n",
     "            html.Div([\n",
-    "                html.H3('Idol birth year distribution', className = H3_STYLE),\n",
-    "                dcc.Tabs(id=\"tabs-birth-year\", value='overall-birth-year', children=[\n",
-    "                    dcc.Tab(label='Overall', value='overall-birth-year', className=TAB_STYLE),\n",
-    "                    dcc.Tab(label='Male / Female', value='splitted-birth-year', className=TAB_STYLE),\n",
+    "                html.H3('Idol birth year distribution', className=H3_STYLE),\n",
+    "                dcc.Tabs(id=\"tabs-birth-year\", value='overall-birth-year', className='mx-2', children=[\n",
+    "                    dcc.Tab(label='Overall', value='overall-birth-year', className=TAB_STYLE, selected_className=TAB_SELECTED_STYLE),\n",
+    "                    dcc.Tab(label='Male / Female', value='splitted-birth-year', className=TAB_STYLE, selected_className=TAB_SELECTED_STYLE),\n",
     "                ]),\n",
     "                html.Div(id='tabs-content-birth-year')\n",
     "            ]),\n",
     "            html.Div([\n",
-    "                html.H3('Idol birth month distribution', className = H3_STYLE),\n",
-    "                dcc.Tabs(id=\"tabs-birth-month\", value='overall-birth-month', children=[\n",
-    "                    dcc.Tab(label='Overall', value='overall-birth-month', className=TAB_STYLE),\n",
-    "                    dcc.Tab(label='Male / Female', value='splitted-birth-month', className=TAB_STYLE),\n",
+    "                html.H3('Idol birth month distribution', className=H3_STYLE),\n",
+    "                dcc.Tabs(id=\"tabs-birth-month\", value='overall-birth-month', className='mx-2', children=[\n",
+    "                    dcc.Tab(label='Overall', value='overall-birth-month', className=TAB_STYLE, selected_className=TAB_SELECTED_STYLE),\n",
+    "                    dcc.Tab(label='Male / Female', value='splitted-birth-month', className=TAB_STYLE, selected_className=TAB_SELECTED_STYLE),\n",
     "                ]),\n",
     "                html.Div(id='tabs-content-birth-month')\n",
     "            ]),\n",
     "        ]),\n",
     "        html.Div([\n",
-    "            html.H2('Idol Debut Analysis', className = H2_STYLE),\n",
+    "            html.H2('Idol Debut Analysis', className=H2_STYLE),\n",
     "            html.Div([\n",
-    "                html.H3('Idol debut month distribution', className = H3_STYLE),\n",
-    "                dcc.Graph(figure = fig_debut2),\n",
+    "                html.H3('Idol debut month distribution', className=H3_STYLE),\n",
+    "                dcc.Graph(figure=fig_debut2, className='mx-2'),\n",
     "            ]),\n",
     "            html.Div([\n",
-    "                html.H3('Number of debuted idols per year', className = H3_STYLE),\n",
-    "                dcc.Graph(figure = fig_debut4),\n",
+    "                html.H3('Number of debuted idols per year', className=H3_STYLE),\n",
+    "                dcc.Graph(figure=fig_debut4, className='mx-2'),\n",
     "            ]),\n",
     "            html.Div([\n",
-    "                html.H3('Number of debuted groups per year', className = H3_STYLE),\n",
-    "                dcc.Graph(figure = fig_debut5),\n",
+    "                html.H3('Number of debuted groups per year', className=H3_STYLE),\n",
+    "                dcc.Graph(figure=fig_debut5, className='mx-2'),\n",
     "            ]),\n",
     "        ]),\n",
     "        html.Div([\n",
-    "            html.H2('Meta-analysis', className = H2_STYLE),\n",
+    "            html.H2('Meta-analysis', className=H2_STYLE),\n",
     "            html.Div([\n",
-    "                html.H3('Gender ratio of idols', className = H3_STYLE),\n",
-    "                dcc.Graph(figure = fig_meta1),\n",
+    "                html.H3('Gender ratio of idols', className=H3_STYLE),\n",
+    "                dcc.Graph(figure=fig_meta1, className='mx-2'),\n",
     "            ]),\n",
     "            html.Div([\n",
-    "                html.H3('Number of members per group', className = H3_STYLE),\n",
-    "                dcc.Graph(figure = fig_meta2),\n",
+    "                html.H3('Number of members per group', className=H3_STYLE),\n",
+    "                dcc.Graph(figure=fig_meta2, className='mx-2'),\n",
     "            ]),\n",
     "            html.Div([\n",
-    "                html.H3('Country of origin distribution of idols', className = H3_STYLE),\n",
-    "                dcc.Graph(figure = fig_meta3)\n",
+    "                html.H3('Country of origin distribution of idols', className=H3_STYLE),\n",
+    "                dcc.Graph(figure=fig_meta3, className='mx-2')\n",
     "            ])\n",
     "        ])\n",
     "])\n",
     "\n",
-    "\n",
+    "# Render tabs for birth year analysis\n",
     "@callback(Output('tabs-content-birth-year', 'children'), Input('tabs-birth-year', 'value'))\n",
     "def render_content(tab):\n",
     "    if tab == 'overall-birth-year':\n",
     "        return html.Div([\n",
-    "            dcc.Graph(figure = fig_bday2)\n",
+    "            dcc.Graph(figure=fig_bday2, className='mx-2')\n",
     "        ])\n",
     "    elif tab == 'splitted-birth-year':\n",
     "        return html.Div([\n",
-    "            dcc.Graph(figure = fig_bday2a)\n",
+    "            dcc.Graph(figure=fig_bday2a, className='mx-2')\n",
     "        ])\n",
     "    \n",
-    "\n",
+    "# Render tabs for birth month analysis\n",
     "@callback(Output('tabs-content-birth-month', 'children'), Input('tabs-birth-month', 'value'))\n",
     "def render_content(tab):\n",
     "    if tab == 'overall-birth-month':\n",
     "        return html.Div([\n",
-    "            dcc.Graph(figure = fig_bday3)\n",
+    "            dcc.Graph(figure=fig_bday3, className='mx-2')\n",
     "        ])\n",
     "    elif tab == 'splitted-birth-month':\n",
     "        return html.Div([\n",
-    "            dcc.Graph(figure = fig_bday3a)\n",
+    "            dcc.Graph(figure=fig_bday3a, className='mx-2')\n",
     "        ])"
    ]
   },
